# ncz-tools

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: pr-check.yml
ncz/: Cargo.toml  README.md
ncz/src/: cli.rs  error.rs  lib.rs  main.rs  output.rs
ncz/src/cmd/: api.rs  backup.rs  channel.rs  common.rs  cron.rs  health.rs  inspect.rs  integrity.rs  logs.rs  mcp.rs  mod.rs  models.rs  pause.rs  providers.rs  restart.rs  resume.rs  sandbox.rs  selftest.rs  sessions.rs  set_agent.rs  status.rs  update.rs  version.rs
ncz/src/state/: agent.rs  agent_env.rs  backup.rs  channel.rs  mcp.rs  mod.rs  providers.rs  quadlet.rs  url.rs
ncz/src/sys/: apt.rs  mod.rs  podman.rs  systemd.rs
ncz/tests/: cli_exit.rs
zterm/: .env.example  .gitignore  Cargo.toml  Dockerfile.build  IMPLEMENTATION.md  NOTICE  README.md  THEME_AND_SPLASH.md  USER_GUIDE.md  WEBSOCKET_IMPLEMENTATION.md  ZEROCLAW_API_ANALYSIS.md
zterm/docs/: API.md  ARCHITECTURE.md  COMMANDS.md  USER_GUIDE.md  ZEROCLAW-API-PARITY.md  config.toml.example  v0.2-roadmap.md  v0.3-ux-roadmap.md
zterm/examples/: smoke_models.rs
zterm/src/: lib.rs  main.rs
zterm/src/cli/: agent.rs  aliases.rs  batch.rs  client.rs  commands.rs  error_handler.rs  input.rs  mnemos.rs  mod.rs  pagination.rs  pairing.rs  retry.rs  session_search.rs  storage.rs  streaming.rs  theme.rs  ui.rs  url_safety.rs  websocket.rs  workspace.rs
zterm/src/cli/openclaw/: client.rs  device.rs  handshake.rs  mod.rs  wire.rs
zterm/src/cli/tui/: delighters.rs  mod.rs  onboarding.rs  repl.rs  rusty_repl.rs  splash.rs  themes.rs  tv_ui.rs
zterm/tests/: integration_tests.rs  openclaw_live.rs
