[package]
name = "zterm"
version = "0.3.0"
edition = "2021"
rust-version = "1.93"
description = "Light, thin, fast, memory-safe terminal REPL for claw-family agentic daemons. Back to the 1970s."
license = "Apache-2.0"
authors = ["Jason Perlow <jperlow@gmail.com>"]
repository = "https://github.com/nclawzero/ncz-tools"
readme = "README.md"
keywords = ["terminal", "repl", "agent", "zeroclaw", "tui"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ratatui = "0.25"
crossterm = "0.27"
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = "0.21"
futures = "0.3"
eventsource-stream = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
fuzzy-matcher = "0.3"
atty = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
shellexpand = "3.0"
dirs = "5.0"
tabwriter = "1.4"
regex = "1.10"
rustyline = "14.0"
dotenvy = "0.15"
ed25519-dalek = { version = "2.2", features = ["pem", "pkcs8", "rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
turbo-vision = "1.1"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "zterm"
path = "src/main.rs"

